--- a/src/main/webapp/css/stylesheet.css
+++ b/src/main/webapp/css/stylesheet.css
@@ -4,7 +4,7 @@ hr {
     border-top: 1px solid #eee;
 }
 
-/* highligting code background */
+/* highlighting code background */
 code {
     background-color: lightgray;
 }
@@ -29,9 +29,4 @@ code {
 
 .light {
     background-color: lightgray;
-}
-
-/* highlighting code in <pre> elements */
-pre.highlighted {
-    background-color: #4f4f4f;
 }
