--- a/src/main/webapp/css/stylesheet.css
+++ b/src/main/webapp/css/stylesheet.css
@@ -1,22 +1,22 @@
-/* horizontal line */
+/* Horizontal line */
 hr {
     border: 0;
     border-top: 1px solid #eee;
 }
 
-/* highlighting code background */
+/* Highlighting code background */
 code {
     background-color: lightgray;
 }
 
-/* floating box used for displaying file content on half of the screen */
+/* Floating box used for displaying file content on half of the screen */
 .floatingHalfBox {
     float: left;
     width: 49%;
     margin: 0.5%;
 }
 
-/* floating box used for displaying file content */
+/* Floating box used for displaying file content */
 .floatingBox {
     margin: 0.5%;
 }
@@ -31,6 +31,7 @@ code {
     background-color: lightgray;
 }
 
+/* Style the body */
 body {
     font-family: 'Kodchasan', sans-serif;
     margin: 0px;
@@ -69,16 +70,4 @@ body {
 /* Page content */
 .content {
     padding: 50px 16px 16px 16px;
-}
-
-/* The sticky class is added to the navbar with JS when it reaches its scroll position */
-.sticky {
-    position: fixed;
-    top: 0;
-    width: 100%;
-}
-
-/* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
-.sticky + .content {
-    padding-top: 60px;
 }
