--- a/src/main/webapp/css/stylesheet.css
+++ b/src/main/webapp/css/stylesheet.css
@@ -103,3 +103,25 @@ strong {
 a {
     color: rgb(72, 134, 248);
 }
+
+.myButton {
+    background-color:#0061a7;
+    -moz-border-radius:28px;
+    -webkit-border-radius:28px;
+    border-radius:28px;
+    border:1px solid #0761e8;
+    display:inline-block;
+    cursor:pointer;
+    color:#ffffff;
+    font-size:17px;
+    padding:16px 31px;
+    text-decoration:none;
+    text-shadow:0px 1px 0px #2f6627;
+}
+.myButton:hover {
+    background-color:#0761e8;
+}
+.myButton:active {
+    position:relative;
+    top:1px;
+}
