--- a/src/main/webapp/css/stylesheet.css
+++ b/src/main/webapp/css/stylesheet.css
@@ -79,7 +79,8 @@ strong {
 
 /* Page content */
 .content {
-    padding: 50px 16px 16px 16px;
+    /*padding: 50px 16px 16px 16px;*/
+    padding: 50px 5% 16px 5%;
 }
 
 .browserDisplay {
