--- a/reports/smolicek.xml
+++ b/reports/smolicek.xml
@@ -22,6 +22,7 @@
             works perfectly.</para>
         <para>I designed the example pages, transformation page and created stylesheet for the whole web-app. It contains
             mainly styling of the tables, horizontal lines, highlighting of the code in the text and boxes for displaying the code.</para>
+        <para>We had some conflicts in the Github repository so I was in charge of solving them.</para>
         <para>Last, but not least I helped with redirecting of the pages.</para>
     </section>
 
